export import module

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Ngetest data keluarga</h1>
     <div id="app"></div>
-    <script src="index.js"></script>
+    <script src="data1.js" type="module"></script>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
